--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <img class="logo" src="images/logoblanco1.png" alt="Solvetic">
     </header>
     
+    <h1>rama uno</h1>
+
     <nav class="navigation">
         <td>Inicio</td>
         <td>Recetas</td>
