agregando h1 de ramados

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img class="logo" src="images/logoblanco1.png" alt="Solvetic">
     </header>
     
+    <h1>rama dos</h1>
     <nav class="navigation">
         <td>Inicio</td>
         <td>Recetas</td>
