--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Le Vegane</title>
 </head>
 <body>
-    <h1>Le Vegane</h1>
+    <div class="conteiner">
+        <nav class="nav-main">
+
+        </nav>
+    </div>
     
 </body>
 </html>
