--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="conteiner">
         <nav class="nav-main">
+            <img src="images/icono2.png" alt="icono le vegane">
 
         </nav>
     </div>
