agregando navegador y css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Vegane</title>
+    <!-- cdn de font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- enlazando el css-->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="conteiner">
+        <!-- navegacion principal-->
         <nav class="nav-main">
-            <img src="images/icono2.png" alt="icono le vegane">
+            <img src="images/icono2.png" alt="icono le vegane" class="nav-brand">
+            <ul class="nav-menu">
+                <li>
+                    <a href="">Inicio</a>
+                </li>
+                <li>
+                    <a href="">Recetas</a>
+                </li>
+                <li>
+                    <a href="">Lugares Recomendados</a>
+                </li>
+                <li>
+                    <a href="">Tips</a>
+                </li>
+            </ul>
+
+            <ul class="nav-menu-right">
+                <li>
+                    <!--pone icono de lupa-->
+                    <a href="">
+                        <i class="fas fa-search"></i>
+                    </a>
+                </li>
+            </ul>
 
         </nav>
     </div>
