--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Le Vegane</title>
     <!-- cdn de font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- font oswald google-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
     <!-- enlazando el css-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="conteiner">
+    <div class="container">
         <!-- navegacion principal-->
         <nav class="nav-main">
             <img src="images/icono2.png" alt="icono le vegane" class="nav-brand">
@@ -40,6 +43,15 @@
             </ul>
 
         </nav>
+        <!-- el hr coloca una linea debajo de la barra de navegación, para que se vea bonito-->
+        <hr>
+
+        <!--showcase imagen principal del sitio-->
+        <header class="showcase">
+            <h2>Últimas Novedades</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem doloribus temporibus labore est ab corrupti voluptate eligendi dicta accusantium fugit perspiciatis sint nisi repudiandae, dolorem veritatis esse! Architecto, esse nemo.</p>
+            <a href="" class="btn">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </header>
     </div>
     
 </body>
