Nuevo menú y un poco de contenido

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Archivos externos -->
     <link rel="stylesheet" href="CSS/estilo.css"/>
+    <link rel="stylesheet" href="CSS/estilo-menu.css"/>
     
     <!--icono sobre el titulo de la pag-->
     <link rel="shortcut icon" href="images/logos/icono1.png">
@@ -33,19 +34,18 @@
 
     <!-- Pequeño div con un contenido de prueba utilizando el class contenedor que formatea el contenido en general -->
     <div class="contenedor">
-        <h1>Bienvenido al Himalaya mi panita</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum esse iste eos ab excepturi inventore voluptatibus voluptate dolorum facere corrupti nam nobis repellendus dicta vel, omnis itaque ad aut.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum esse iste eos ab excepturi inventore voluptatibus voluptate dolorum facere corrupti nam nobis repellendus dicta vel, omnis itaque ad aut.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum esse iste eos ab excepturi inventore voluptatibus voluptate dolorum facere corrupti nam nobis repellendus dicta vel, omnis itaque ad aut.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum esse iste eos ab excepturi inventore voluptatibus voluptate dolorum facere corrupti nam nobis repellendus dicta vel, omnis itaque ad aut.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum esse iste eos ab excepturi inventore voluptatibus voluptate dolorum facere corrupti nam nobis repellendus dicta vel, omnis itaque ad aut.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum esse iste eos ab excepturi inventore voluptatibus voluptate dolorum facere corrupti nam nobis repellendus dicta vel, omnis itaque ad aut.</p>
-
-        <br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <h1>Bienvenido a nuestro blog</h1>
+        <div class="preguntas">
+            <h2>¿Qué hacemos?</h2>
+            <p>asd</p>
+        </div>
         
+    </div>
+
+    <div>
+        <footer>
+            <p class="copy"> Le Vegane &copy; 2021 </p>
+        </footer>
     </div>
 </body>
 </html>
