--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <img src="images/icono2.png" alt="icono le vegane" class="nav-brand">
             <ul class="nav-menu">
                 <li>
-                    <a href="">Inicio</a>
+                    <a href="index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="">Recetas</a>
+                    <a href="recetas.html">Recetas</a>
                 </li>
                 <li>
                     <a href="">Lugares Recomendados</a>
