se agregaron tres recetas mas al recetes html

--- a/recetas.html
+++ b/recetas.html
@@ -98,6 +98,34 @@
                 <p>La algarroba es un fruto delicioso ideal como sustituto del chocolate, lleno de beneficios nutritivos y propiedades excelentes. Te cuento cómo prepararlo con una exquisita receta.</p>
                 <a href="">Leer más</a>
             </div>
+
+            <div class="card">
+                <img src="images/recetas/receta6.jpeg" alt="">
+                <h4>Ceviche de champiñones</h4>
+                <p>Delicioso y fresco ceviche de champiñones, la combinación perfecta para aquellos que quiere probar platos de verano y de la forma más saludable, vegana.</p>
+                <a href="">Leer más</a>
+            </div>
+
+            <div class="card">
+                <img src="images/recetas/receta7.jpeg" alt="">
+                <h4>Champiñones rellenos</h4>
+                <p>Un plato ideal para los cockteles de invitados o simplemente para las noches de películas, fácil y simple de elaborar. Lo mejor de todo, vegan.</p>
+                <a href="">Leer más</a>
+            </div>
+
+            <div class="card">
+                <img src="images/recetas/receta8.jpeg" alt="">
+                <h4>Carpaccio de verduras</h4>
+                <p>El carpaccio vegetariano es un plato de entrada muy fresco, ideal para esas personas que no quieren o no pueden consumir proteínas animales. En esta receta, se sustituye la carne por una verdura, siendo un plato muy ligero y fácil de digerir.</p>
+                <a href="">Leer más</a>
+            </div>
+
+            <div class="card">
+                <img src="images/recetas/receta9.jpeg" alt="">
+                <h4>Pizzetas de zapallo italiano</h4>
+                <p>Increíble receta de pizzetas de zapallo italiano. Ideal para esas noches con ganas de comer algo rico pero que no nos caiga pesado.</p>
+                <a href="">Leer más</a>
+            </div>
         </div>
 
 
