agregue tres card de recetas

--- a/recetas.html
+++ b/recetas.html
@@ -126,6 +126,27 @@
                 <p>Increíble receta de pizzetas de zapallo italiano. Ideal para esas noches con ganas de comer algo rico pero que no nos caiga pesado.</p>
                 <a href="">Leer más</a>
             </div>
+
+            <div class="card">
+                <img src="images/recetas/receta10.jpeg" alt="">
+                <h4>Croquetas de zanahoria</h4>
+                <p>Maravillosas y simples croquetas de zanahoria, ideal para un almuerzo liviano, rico y nutritivo.</p>
+                <a href="">Leer más</a>
+            </div>
+
+            <div class="card">
+                <img src="images/recetas/receta11.jpeg" alt="">
+                <h4>Ensalada griega</h4>
+                <p>La ensalada griega es una ensalada elaborada en Grecia con los ingredientes característicos de este país. Pero como somos veganes, la adaptamos :D .</p>
+                <a href="">Leer más</a>
+            </div>
+
+            <div class="card">
+                <img src="images/recetas/receta12.jpeg" alt="">
+                <h4>Ensalada de quinoa</h4>
+                <p>La ensalada de quinoa es un plato muy nutritivo, saludable y ligero. Es una receta muy fácil y sencilla.</p>
+                <a href="">Leer más</a>
+            </div>
         </div>
 
 
