agregando carpeta de recetas mas html de la primera receta

--- a/recetas.html
+++ b/recetas.html
@@ -16,7 +16,7 @@
     <!--icono sobre el titulo de la pag-->
     <link rel="shortcut icon" href="images/logos/icono1.png">
 
-    <title>Le Vegane</title>
+    <title>Le Vegane - Recetas</title>
 </head>
 
 <body>
@@ -68,7 +68,7 @@
                 <h4>Sandwich de No-Pollo</h4>
                 <p>Delicioso Sandwich de no-pollo ideal para celebraciones o para picnics con tus seres queridos, totalmente vegan.
                 </p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/sandwich-no-pollo.html">Leer más</a>
             </div>
     
             <div class="card">
