se agregaron recetas con articulos enlazados a las cards

--- a/recetas.html
+++ b/recetas.html
@@ -75,77 +75,77 @@
                 <img src="images/recetas/receta2.jpeg" alt="">
                 <h4>Ricotta de maní</h4>
                 <p>Esta maravillosa ricotta vegana pueden disfrutarla en un aperitivo con unas ricas bruschetas acompañadas de tomatitos cherry y ciboulette.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/ricotta-de-mani.html">Leer más</a>
             </div>
     
             <div class="card">
                 <img src="images/recetas/receta3.jpg" alt="">
                 <h4>Harina de garbanzos</h4>
                 <p>Este ingrediente tiene diversos usos, ya que puede servir como remplazo de la harina de trigo y servir como espesante en preparaciones en vez del huevo.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/harina-de-garbanzos.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta4.jpeg" alt="">
                 <h4>Ensalada de garbanzos</h4>
                 <p>Exquisita ensalada de garbanzos, con ingredientes frescos para los tiempos de altas temperaturas. Mastica con calma y disfruta cada bocado con amor y agradecimiento </p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/ensalada-de-garbanzos.html">Leer más</a>
             </div>
     
             <div class="card">
                 <img src="images/recetas/receta5.jpeg" alt="">
                 <h4>Budín de algarroba</h4>
                 <p>La algarroba es un fruto delicioso ideal como sustituto del chocolate, lleno de beneficios nutritivos y propiedades excelentes. Te cuento cómo prepararlo con una exquisita receta.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/budin-de-algarroba.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta6.jpeg" alt="">
                 <h4>Ceviche de champiñones</h4>
                 <p>Delicioso y fresco ceviche de champiñones, la combinación perfecta para aquellos que quiere probar platos de verano y de la forma más saludable, vegana.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/ceviche-de-champiniones.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta7.jpeg" alt="">
                 <h4>Champiñones rellenos</h4>
                 <p>Un plato ideal para los cockteles de invitados o simplemente para las noches de películas, fácil y simple de elaborar. Lo mejor de todo, vegan.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/champiniones-rellenos.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta8.jpeg" alt="">
                 <h4>Carpaccio de verduras</h4>
                 <p>El carpaccio vegetariano es un plato de entrada muy fresco, ideal para esas personas que no quieren o no pueden consumir proteínas animales. En esta receta, se sustituye la carne por una verdura, siendo un plato muy ligero y fácil de digerir.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/carpaccio-de-verduras.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta9.jpeg" alt="">
                 <h4>Pizzetas de zapallo italiano</h4>
                 <p>Increíble receta de pizzetas de zapallo italiano. Ideal para esas noches con ganas de comer algo rico pero que no nos caiga pesado.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/pizzetas-de-zapallo-italiano.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta10.jpeg" alt="">
                 <h4>Croquetas de zanahoria</h4>
                 <p>Maravillosas y simples croquetas de zanahoria, ideal para un almuerzo liviano, rico y nutritivo.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/croqueta-de-zanahoria.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta11.jpeg" alt="">
                 <h4>Ensalada griega</h4>
                 <p>La ensalada griega es una ensalada elaborada en Grecia con los ingredientes característicos de este país. Pero como somos veganes, la adaptamos :D .</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/ensalada-griega.html">Leer más</a>
             </div>
 
             <div class="card">
                 <img src="images/recetas/receta12.jpeg" alt="">
                 <h4>Ensalada de quinoa</h4>
                 <p>La ensalada de quinoa es un plato muy nutritivo, saludable y ligero. Es una receta muy fácil y sencilla.</p>
-                <a href="">Leer más</a>
+                <a href="recetasitios/ensalada-de-quinoa.html">Leer más</a>
             </div>
         </div>
 
