agregamos showcase al index

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             <hr>
         </div>
 
+        <header class="showcase">
+            <h2>Revisa nuestras últimas recetas!!</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem doloribus temporibus labore est ab corrupti voluptate eligendi dicta accusantium fugit perspiciatis sint nisi repudiandae, dolorem veritatis esse! Architecto, esse nemo.</p>
+            <a href="recetas.html" class="btn">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </header>
         <!--
 
             ACÁ VA EL CONTENIDO DE LA PAGINA
@@ -68,9 +73,6 @@
             MIRAMEEEEEE AQUIIIIIIII
 
         -->
-        <div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque quaerat incidunt explicabo voluptates nostrum, deserunt officia in tenetur minus culpa sunt dolorum iure suscipit iste corporis vitae? Quasi, veritatis placeat!</p>
-        </div>
 
         <!-- Saltadores de página para probar el scroll, borrar cuando se rellene de verdad -->
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
