problema de showcase solucionado

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <header class="showcase">
             <h2>Revisa nuestras últimas recetas!!</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem doloribus temporibus labore est ab corrupti voluptate eligendi dicta accusantium fugit perspiciatis sint nisi repudiandae, dolorem veritatis esse! Architecto, esse nemo.</p>
+            <p>Te traemos las mejores recetas veganas/vegetarianas para que comas rico, saludable y de manera nutritiva. </p>
             <a href="recetas.html" class="btn">Leer más <i class="fas fa-angle-double-right"></i></a>
         </header>
         <!--
