modificando los enlaces de tips

--- a/recetasitios/budin-de-algarroba.html
+++ b/recetasitios/budin-de-algarroba.html
@@ -43,7 +43,7 @@
                         <a href="">Lugares Recomendados</a>
                     </li>
                     <li>
-                        <a href="">Tips</a>
+                        <a href="../tips.html">Tips</a>
                     </li>
                 </ul>
                 
