--- a/recetasitios/carpaccio-de-verduras.html
+++ b/recetasitios/carpaccio-de-verduras.html
@@ -43,7 +43,7 @@
                         <a href="">Lugares Recomendados</a>
                     </li>
                     <li>
-                        <a href="">Tips</a>
+                        <a href="../tips.html">Tips</a>
                     </li>
                 </ul>
                 
