Agregados showcase y eliminado espacio entre imágen y menubar

--- a/index.html
+++ b/index.html
@@ -61,23 +61,20 @@
             <hr>
         </div>
 
-        <header class="showcase">
+        <header class="showcase showcase1-bckgrnd">
             <h2>Revisa nuestras últimas recetas!!</h2>
             <p>Te traemos las mejores recetas veganas/vegetarianas para que comas rico, saludable y de manera nutritiva. </p>
             <a href="recetas.html" class="btn">Leer más <i class="fas fa-angle-double-right"></i></a>
         </header>
-        <!--
+        <header class="showcase showcase2-bckgrnd">
+            <h2>¿Qué es Le Vegane?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rerum quia consequuntur hic quasi consectetur sapiente distinctio molestias, sequi, harum praesentium soluta eos! Ad, neque sapiente necessitatibus maiores tempore enim?</p>
+        </header>
+        <header class="showcase showcase3-bckgrnd">
+            <h2>Nuestro objetivo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rerum quia consequuntur hic quasi consectetur sapiente distinctio molestias, sequi, harum praesentium soluta eos! Ad, neque sapiente necessitatibus maiores tempore enim?</p>
+        </header>
 
-            ACÁ VA EL CONTENIDO DE LA PAGINA
-            ACÁ OYE AAAAAAA
-            MIRAMEEEEEE AQUIIIIIIII
-
-        -->
-
-        <!-- Saltadores de página para probar el scroll, borrar cuando se rellene de verdad -->
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
 
     <footer>
