se genero una descripcion para que es vegane y objetivos

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         </header>
         <header class="showcase showcase2-bckgrnd">
             <h2>¿Qué es Le Vegane?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rerum quia consequuntur hic quasi consectetur sapiente distinctio molestias, sequi, harum praesentium soluta eos! Ad, neque sapiente necessitatibus maiores tempore enim?</p>
+            <p> Le Vegane nace como un proyecto entre tres compañeres que quieren fomentar la inclusión de dietas veganas y vegetarianas al público general. Sabemos que en la actualidad el planeta tierra está sufriendo muchos cambios a causa del calentamiento global, como también, vemos que la explotación de la especie animal para todos los fines es un acto de crueldad, provoca sufrimiento y dolor.</p>
         </header>
         <header class="showcase showcase3-bckgrnd">
             <h2>Nuestro objetivo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rerum quia consequuntur hic quasi consectetur sapiente distinctio molestias, sequi, harum praesentium soluta eos! Ad, neque sapiente necessitatibus maiores tempore enim?</p>
+            <p> Le Vegane busca ser un grano de arena en el proceso de cambiar el sistema y buscar un mundo mejor para todos los seres vivos. Y ¿Cómo? Compartiendo información, recetas y tips que permiten la fácil transición de una dieta carnívora a una de tipo vegana/vegetariana. Cada grano de arena que aportemos, suma a la lucha contra la crueldad y el cambio climático.</p>
         </header>
 
     </main>
