Cambiado el gradiente oscuro a imágenes de showcase

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </header>
         <header class="showcase showcase2-bckgrnd">
             <h2>¿Qué es Le Vegane?</h2>
-            <p> Le Vegane nace como un proyecto entre tres compañeres que quieren fomentar la inclusión de dietas veganas y vegetarianas al público general. Sabemos que en la actualidad el planeta tierra está sufriendo muchos cambios a causa del calentamiento global, como también, vemos que la explotación de la especie animal para todos los fines es un acto de crueldad, provoca sufrimiento y dolor.</p>
+            <p> Le Vegane nace como un proyecto entre tres compañeros que quieren fomentar la inclusión de dietas veganas y vegetarianas al público general. Sabemos que en la actualidad el planeta tierra está sufriendo muchos cambios a causa del calentamiento global, como también, vemos que la explotación de la especie animal para todos los fines es un acto de crueldad, provoca sufrimiento y dolor.</p>
         </header>
         <header class="showcase showcase3-bckgrnd">
             <h2>Nuestro objetivo</h2>
