realizando el merge con la ramaUNO

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- cdn de font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     
-    <!--icono sobre el titulo de la pag-->
+    <!--icono sobre el titulo de la pagina-->
     <link rel="shortcut icon" href="images/logos/icono1.png">
 
     <title>Le Vegane</title>
