--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="body1">
     <main>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg" id="mainNav">
             <!-- Navbar content -->
             <a class="navbar-brand" href="#">
                 <img src="images/logos/blancologo.png" width="145" height="35" class="d-inline-block align-top" alt="">
