ideando los post

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown"
-                            aria-expanded="false">Dropdown</a>
+                            aria-expanded="false">Más</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown07">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Lugares Recomendados</a></li>
+                            <li><a class="dropdown-item" href="#">Noticias</a></li>
+                            <li><a class="dropdown-item" href="#">Regístrate</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -130,94 +130,88 @@
               <div class="card-group">
 
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/noticias/vegproducts.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
+                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
                 </div>
 
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/noticias/beyond-meat.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
+                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
                 </div>
 
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/noticias/notestingonanimals1.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
+                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
                 </div>
               </div>       
+              
               <!-- CARD COMPACTAS-->
               <div class="card-group">
 
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/noticias/vegproducts.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
+                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
                 </div>
 
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/noticias/beyond-meat.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
+                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
                 </div>
 
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/noticias/notestingonanimals1.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
+                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
                 </div>
               </div> 
               <!-- fin cards compactas-->
               <hr>
        </div>
-       <!-- Side widgets-->
+       <!-- Side cards-->
         <div class="col-md-4">
                       <div class="h-40 p-5 text-white bg-dark rounded-3">
                         <h3>Descubre nuestros lugares recomendados!</h3>
                         <p>Le vegane te presenta los mejores lugares para comer con las 3B Bueno, Bonito y Barato.</p>
-                        <button class="btn btn-outline-light" type="button">Example button</button>
+                        <button class="btn btn-outline-light" type="button">Leer Más</button>
                       </div>
 
                       <div class="h-40 p-5 bg-light border rounded-3">
                         <h3>Infórmate con los últimos tips de la vida vegana</h3>
                         <p>los mejores tips para que te cambies a la vida vegana</p>
-                        <button class="btn btn-outline-secondary" type="button">Example button</button>
+                        <button class="btn btn-outline-secondary" type="button">Leer Más</button>
                       </div>
                       <div class="h-40 p-5 text-white bg-dark rounded-3">
-                        <h2>Change the background</h2>
-                        <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-                        <button class="btn btn-outline-light" type="button">Example button</button>
+                        <h3>Regístrate y se parte de la comunidad Le Vegane</h3>
+                        <p>Entérate de todo lo que tenemos para ti!</p>
+                        <button class="btn btn-outline-light" type="button">Leer Más</button>
+                      </div>
+                      <div class="h-40 p-5 bg-light border rounded-3">
+                        <h3>Revisa las exclusivas recetas de Le Vegane</h3>
+                        <p>Para hacer tu vida vegana más fácil</p>
+                        <button class="btn btn-outline-secondary" type="button">Leer Más</button>
                       </div>
 
 
@@ -227,12 +221,42 @@
 
 
 <!-- ****************************************************************************** -->
-<!--footer-->
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Le Vegane 2021</p></div>
-        </footer>
-
+         <!-- Footer-->
+         <footer class="py-5 bg-dark">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-8 col-md-10 mx-auto">
+                      <ul class="list-inline text-center">
+                          <li class="list-inline-item">
+                              <a href="#!">
+                                  <span class="fa-stack fa-lg">
+                                      <i class="fas fa-circle fa-stack-2x"></i>
+                                      <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                  </span>
+                              </a>
+                          </li>
+                          <li class="list-inline-item">
+                              <a href="#!">
+                                  <span class="fa-stack fa-lg">
+                                      <i class="fas fa-circle fa-stack-2x"></i>
+                                      <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                                  </span>
+                              </a>
+                          </li>
+                          <li class="list-inline-item">
+                              <a href="#!">
+                                  <span class="fa-stack fa-lg">
+                                      <i class="fas fa-circle fa-stack-2x"></i>
+                                      <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                  </span>
+                              </a>
+                          </li>
+                      </ul>
+                      <p class="m-0 text-center text-white">Copyright &copy; Le Vegane 2021</p>
+                  </div>
+              </div>
+          </div>
+      </footer>
 
     <!-- BOOTSTRAP Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
