--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
                         <a class="nav-link active" aria-current="page" href="recetas.html">Recetas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="tips.html">Tips</a>
+                        <a class="nav-link active" aria-current="page" href="#">Regístrate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown"
                             aria-expanded="false">Más</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown07">
                             <li><a class="dropdown-item" href="#">Lugares Recomendados</a></li>
-                            <li><a class="dropdown-item" href="#">Noticias</a></li>
-                            <li><a class="dropdown-item" href="#">Regístrate</a></li>
+                            <li><a class="dropdown-item" href="tips.html">Tips</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -120,9 +122,9 @@
               <div class="card mb-4">
                 <img class="card-img-top" src="images/noticias/unilever.png" alt="Card image cap"  />
                 <div class="card-body text-dark bg-light rounded-3">
-                    <h2 class="card-title">Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a class="btn btn-outline-secondary" href="#!">Read More →</a>
+                    <h2 class="card-title">CEO de Unilever: «El mundo se está moviendo hacia una alimentación vegetariana»</h2>
+                    <p class="card-text">El director ejecutivo de Unilever, Alan Jope, admitio que el mundo está cambiando hacia una alimentación vegetariana, además describio la creciente demanda de alimentos de origen vegetal como una tendencia «sorprendente».</p>
+                    <a class="btn btn-outline-secondary" href="#!">Leer Más→</a>
                 </div>
               </div>
               
