--- a/recetas.html
+++ b/recetas.html
@@ -27,19 +27,44 @@
 
 <body class="body1">
     <main>
-        <nav class="navbar navbar-dark bg-dark">
-            <!-- Navbar content -->
-            <a class="navbar-brand" href="#">
+    <!--navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Eighth navbar example">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/logos/blancologo.png" width="145" height="35" class="d-inline-block align-top" alt="">
-              </a>
+            </a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-              <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="index.html" class="nav-link px-2 text-white">INICIO</a></li>
-                <li><a href="recetas.html" class="nav-link px-2 text-white">RECETAS</a></li>
-                <li><a href="tips.html" class="nav-link px-2 text-white">TIPS</a></li>
-              </ul>
-          </nav>
-        
+            <div class="navbar-collapse collapse" id="navbarsExample07" style="">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="recetas.html">Recetas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Regístrate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="noticias.html">Noticias</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown"
+                            aria-expanded="false">Más</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdown07">
+                            <li><a class="dropdown-item" href="#">Lugares Recomendados</a></li>
+                            <li><a class="dropdown-item" href="tips.html">Tips</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
         </div>
         <!-- tarjetas con efecto hoover para presentar el menu con recetas-->
         <div class="containercard">
